--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,12 @@
             android:name=".GroupChatActivity"
             android:exported="false" />
         <activity
+            android:name=".VerificationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SignUP"
+            android:exported="false" />
+        <activity
             android:name=".CallActivity"
             android:exported="false" />
         <activity
@@ -40,7 +46,7 @@
             android:name=".OTPActivity"
             android:exported="false" />
         <activity
-            android:name=".VerificationActivity"
+            android:name=".Login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
